--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
     "mongoose": "^8.9.3",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0"
   }
 }
