--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "globals": "^15.14.0",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
+    "jstat": "^1.9.6",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9",
     "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "regression": "^2.0.1"
   }
 }
