--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "globals": "^15.14.0",
+    "google-auth-library": "^9.15.1",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
     "jstat": "^1.9.6",
